removed unneeded functionality from codegen